syntax = "proto3";

package example.pcbook;
option go_package = "proto/pb";

import "google/protobuf/timestamp.proto";

import "proto/keyboard_message.proto";
import "proto/memory_message.proto";
import "proto/processor_message.proto";
import "proto/screen_message.proto";
import "proto/storage_message.proto";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  repeated GPU gpu = 5;
  Memory ram = 6;
  repeated Storage storage = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    double weight_lbs = 11;
  }
  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}